--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,18 +3,13 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "ng serve",
-      "type": "chrome",
+      "type": "node",
       "request": "launch",
-      "preLaunchTask": "npm: start",
-      "url": "http://localhost:4200/"
-    },
-    {
-      "name": "ng test",
-      "type": "chrome",
-      "request": "launch",
-      "preLaunchTask": "npm: test",
-      "url": "http://localhost:9876/debug.html"
+      "name": "Debug Angular & Bun",
+      "program": "${workspaceFolder}/node_modules/@angular/cli/bin/ng",
+      "args": ["serve"],
+      "runtimeExecutable": "bun",
+      "skipFiles": ["<node_internals>/**"]
     }
   ]
 }
