--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^18.2.0",
     "bootstrap": "5.3.2",
     "bootstrap-icons": "1.10.5",
+    "crypto-js": "^4.2.0",
     "dompurify": "^3.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -31,6 +32,7 @@
     "@angular-devkit/build-angular": "^18.2.11",
     "@angular/cli": "^18.2.11",
     "@angular/compiler-cli": "^18.2.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/dompurify": "^3.0.5",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.2.0",
