--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@angular/router": "^18.2.0",
     "bootstrap": "5.3.2",
     "bootstrap-icons": "1.10.5",
+    "chart.js": "^4.4.6",
     "crypto-js": "^4.2.0",
     "dompurify": "^3.2.0",
+    "ng2-charts": "^6.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
