--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "dompurify": "^3.2.0",
     "ng2-charts": "^6.0.1",
     "rxjs": "~7.8.0",
-    "survey-angular-ui": "^1.12.17",
+    "survey-angular": "^1.12.15",
+    "survey-angular-ui": "^1.12.15",
     "survey-core": "^1.12.15",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
