--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,7 @@
                 "input": "public"
               }
             ],
-            "styles": ["src/styles.scss"],
+            "styles": ["src/styles.scss","node_modules/survey-core/modern.min.css"],
             "scripts": [],
             "stylePreprocessorOptions": {
               "includePaths": ["src/"]
